# LivineSite

./: .gitignore  README.md  data.json  manage.py  pyproject.toml  requirements.txt
api/: admin.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_auto_20220506_2239.py  0002_auto_20220611_0011.py  0002_delete_difficulty.py  0002_recipemodel_rating.py  0003_alter_recipemodel_created_at.py  0003_alter_recipemodel_rating.py  0003_auto_20220517_1027.py  0003_recipemodel_diff.py  0004_recipemodel_imageurl.py  0004_recipemodel_time_taken.py  0005_alter_recipemodel_imageurl.py  0005_auto_20220518_1938.py  0006_auto_20220128_1554.py
api/templates/api/: index.html
base/: FCMmanage.py  admin.py  models.py  serviceAccountKey.json  tokenSerializer.py  urls.py  views.py
base/migrations/: 0001_initial.py  0002_auto_20211007_1135.py
base/templates/base/: dashboard.html
livineBackend/: asgi.py  settings.py  urls.py  wsgi.py
